--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-Bütün tablolar için sayfalama
+Bütün tablolar için sayfalama (Loglar için )
 Kritik ve Gizlilik derecesi için bilgilendirme
 -Mail gönderme çalıştır.
 Profili düzenle
